# DelaunayDiagram

./: CMakeLists.txt  LICENSE  README.md
apps/: centroid_voronoi.cpp  generalized_voronoi_diagram.cpp  interactive_delaunay_voronoi.cpp
include/DelaunayDiagram/: delaunay_diagram.h
include/DelaunayTriangulation/: delaunay_triangulation.h  delaunay_triangulation.hpp  delaunay_triangulation_drawer.hpp  geometry_primitives.h  geometry_primitives.hpp  vertexed_polygons.hpp  voronoi_diagram.hpp
src/: centroid_voronoi.cpp  delaunay_diagram.cpp  delaunay_triangulation.cpp  delaunay_triangulation_drawer.cpp  geometry_primitives.cpp  interactive_delaunay_voronoi.cpp  main.cpp  voronoi_diagram.cpp
test/: test_geometry_primitives.cpp
